package edu.fiuba.algo3.modelo.Math;

public interface IMath {
    double random();
}
