package edu.fiuba.algo3.modelo.Meta;

import edu.fiuba.algo3.modelo.Efecto.Efecto;
import edu.fiuba.algo3.modelo.Colocador.Vehiculo.Vehiculo;

public interface Meta {
    Efecto atravesar(Vehiculo vehiculo);
}
